fix: redundant sector paths
